# build-with-terminator

./: .gitignore  README.md
arch/Gem5/: Dockerfile  README.md  analyze_results.py  pyproject.toml  run_study_1.sh  run_study_2.sh  run_study_3.sh  run_study_4.sh
arch/Gem5/configs/: common.py  study_1_ilp_wall.py  study_2_branch_pred.py  study_3_cache_sensitivity.py  study_4_ppa.py
eda/gdsii/gdstk/: README.md  fetch_examples.py  main.py  pyproject.toml
eda/gdsii/klayout-4-drc/: README.md  asap7_fixed.gds  asap7_mini.drc  asap7_test.gds  create_sample_layout.py  drc_ASAP7.lydrc  drc_fix.py  drc_violations.lyrdb  main.py  output_test_101.gds  pyproject.toml  run_all_drc.py  run_drc.py  run_drc_textual.py  test_target.gds
eda/gdsii/klayout-as-pylib/: README.md  create_sample.py  main.py  pyproject.toml  read_sample.py  sample.gds
llm/deepeval-app/: agent.py  cli.py  evaluator.py  pyproject.toml  test.csv
llm/gemma-embd/: main.py  pyproject.toml  similarity_search.py
llm/log-analyis-client/: GEMINI.md  main.py  pyproject.toml
llm/log-analyis-client/openspec/changes/establish-project-skeleton/: design.md  proposal.md  shared_memory_architecture.md  tasks.md
llm/log-analyis-client/worker/: CMakeLists.txt  main.cpp
llm/vector-index/: example_usage.py  vectorless_index.py
ui/bug-report/: bug_manager.py  main.py  pyproject.toml
ui/nicegui-compilerviz/: main.py  pyproject.toml
ui/nicegui-compilerviz/src/: layout.py  left_panel.py  right_panel.py  sidebar.py
ui/pyautogui/: README.md  client.py  main.py  pyproject.toml  server.py  test_remote.py
(+8 files in other folders)
